# gecko

./: .env.example  .gitignore  BENCHMARK_SUMMARY.md  COMPOSE_ANALYSIS_SUMMARY.md  COMPOSE_CODE_REVIEW.md  COMPOSE_DEEP_AUDIT_2025.md  COMPOSE_FIXES.md  CONTRIBUTING.md  ENGINE_CODE_REVIEW.md  FIXES_SUMMARY.md  LICENSE  OBSERVABILITY_IMPROVEMENTS.md  P3_METRICS_ENHANCEMENT.md  QUICK_REFERENCE.md  README.md  UNIT_TESTING_SUMMARY.md  __init__.py  directory_tree.txt  exceptions.py  gecko_core_engine_sources.txt  gecko_v0.1_core_compose_sources.txt  gecko_v0.1_example_sources.txt  gecko_v0.1_sources.txt  gecko_v0.1_tests_sources.txt  gecko_v0.2_examples.txt  gecko_v0.2_sources.txt  gecko_v0.2_tests.txt  gecko_v0.3.1_documents.txt  gecko_v0.3_sources.txt  gecko_v0.4.0_sources.txt  gecko_v0.4.0_tests.txt  media.py  pyproject.toml  requirements.txt
benchmarks/: COMPARISON_SUMMARY_FINAL.md  FINAL_REPORT.py  PERFORMANCE_REPORT.md  RESULTS_LONG_STABILITY_REPORT.md  compose_cow_benchmark.py  compose_cow_detailed_benchmark.py  compose_cow_long_stability.py  results_cow_performance.json  visualize_results.py
docs/: 01_index.md  02_install.md  03_quickstart.md  04_configuration.md  README.md  best_practices.md  configuration.md  core_concepts.md  deployment.md  gecko-core-api-v1.0.md  gecko_v0.3_analysis.md  getting_started.md  index.md  orchestration.md  plugins.md  system design document.md
docs/concepts/: 05_architecture.md  06_agents_and_tools.md  07_memory_and_state.md
docs/design/: Gecko v0.4 开发设计规格说明书.md  Gecko v0.4 系统分析与设计方案.md
docs/guides/: 08_workflows.md  09_rag_pipeline.md  10_prompt_management.md  11_structured_output.md  12_observability.md
docs/plugins/: 13_models.md  14_storage.md
examples/: basic_agent.py  engine_react_demo.py  fast_dev_demo.py  full_tool_test.py  protocol_demo.py  redis_storage_demo.py  sqlite_storage_demo.py  team_demo.py  tool_demo.py  vector_storage_demo.py  workflow_dag.py  workflow_demo.py  zhipu_agent.py
examples/advanced/: concurrent_workflow_demo.py  telemetry_demo.py
examples/cli/: cli_demo.py  my_workflow.py
examples/compose/: team_demo.py  workflow_dag_demo.py  workflow_demo.py  workflow_next_resume_demo.py  workflow_resume_demo.py
examples/core/: engine_base_demo.py  engine_react_demo.py  event_bus_stream_demo.py  events_demo.py  memory_demo.py  message_demo.py  output_demo.py  prompt_demo.py  protocol_demo.py  session_demo.py  structure_demo.py  structure_repair_demo.py  toolbox_demo.py  utils_demo.py
examples/knowledge/: knowledge_rag_demo.py
examples/models/: models_demo.py
examples/storage/: custom_storage_demo.py  redis_storage_demo.py  sqlite_storage_demo.py  vector_storage_demo.py
examples/tools/: advanced_stateful_demo.py  tools_demo.py
gecko/: __init__.py  config.py  version.py
gecko/cli/: README.md  __init__.py  main.py  utils.py
gecko/compose/: README.md  __init__.py  nodes.py  team.py  workflow.py
gecko/core/: README.md  agent.py  builder.py  container.py  deprecation.py  error_codes.py  events.py  exceptions.py  limits.py  logging.py  memory.py  message.py  metrics.py  output.py  prompt.py  protocols.py  resilience.py  retry.py  runner.py  session.py  structure.py  telemetry.py  toolbox.py  tracing.py  types.py  utils.py
gecko/plugins/: base.py  registry.py
gecko/utils/: cleanup.py
models/: __init__.py  base.py  message.py  metrics.py  registry.py  utils.py
models/formatters/: base.py
scripts/: README.md  commit.sh  create_project.sh  init_folder_structure.sh  pre-commit  publish.py  run_examples.sh  run_tests.sh  scan_files.py  scan_folder.py  scan_pyfiles.py  verify_phase1.py  waterprint.py
tests/: conftest.py  test_config.py
tests/cli/: test_cli.py
tests/compose/: test_coverage_gap.py  test_cow.py  test_engine_fixes.py  test_final_coverage.py  test_graph_topology.py  test_nodes.py  test_p0_fixes.py  test_state.py  test_team.py  test_team_advanced.py  test_workflow.py  test_workflow_advanced.py
tests/core/: test_agent.py  test_buffer.py  test_buffer_edgecases.py  test_buffer_stress.py  test_builder.py  test_config_integration.py  test_container.py  test_engine_base.py  test_engine_buffer.py  test_engine_metrics.py  test_engine_react.py  test_events.py  test_limits.py  test_logging.py  test_memory.py  test_message.py  test_metrics.py  test_output.py  test_phase2_core.py  test_phase3_workflow.py  test_phasel_infra.py  test_prompt.py  test_protocols.py  test_public_api.py  test_react.py  test_react_advanced.py  test_resilience.py  test_session.py  test_storage.py  test_structure.py  test_structure_repair.py  test_summary_optimization.py  test_telemetry.py  test_toolbox.py  test_tracing.py  test_utils.py  test_v03_events.py  test_v03_multimodal.py  test_v03_stream.py  test_v03_structure.py
tests/integration/: test_full_workflow.py  test_phase1_integration.py  test_phase2_integration.py
tests/performance/: test_performance.py  test_phase2_benchmarks.py
tests/plugins/: test_rag.py  test_rag_components.py  (+1 more)
utils/: cache.py  common.py  display.py  file_io.py  log.py  media_utils.py  message.py  network_utils.py  prompts.py  reasoning.py  serialization.py  string_utils.py  system_utils.py  time_utils.py  tool_utils.py
(+158 files in other folders)
